...
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/btnPintura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:clickable="true"
            android:padding="16dp"
            android:orientation="horizontal"
...
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_cuadro"/>

            <TextView
                android:id="@+id/textoBtnPintura"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:gravity="center"
                android:text="Pintura" />
        </LinearLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/btnArquitectura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:clickable="true"
            android:padding="16dp"
            android:orientation="horizontal"
...
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_arqui"/>

            <TextView
                android:id="@+id/textoBtnArquitectura"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:gravity="center"
                android:text="Arquitectura" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/btnEscultura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:clickable="true"
            android:padding="16dp"
            android:orientation="horizontal"
...
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_escultura"/>

            <TextView
                android:id="@+id/textoBtnEscultura"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
...
