...
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/nombreObraIntroducido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines = "2"
            android:scrollbars = "vertical"
            android:layout_weight="1"
            android:ems="10"
...
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/descripcionObraIntroducida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines = "4"
                android:scrollbars = "vertical"
                android:ems="10"
...
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/latitudIntroducida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines = "2"
                android:scrollbars = "vertical"
                android:ems="10"
...
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/longitudIntroducida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines = "2"
                android:scrollbars = "vertical"
                android:ems="10"
...
            android:adjustViewBounds="true"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            app:srcCompat="@mipmap/ic_arqui" />

        <Button
            android:id="@+id/btnDoneObra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelBtnAddDone"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"/>

...
