...
        android:gravity="center_horizontal">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ListView
            android:id="@+id/listaAutores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnAddAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@mipmap/ic_add"
            app:backgroundTint="@color/colorPrimary" />
        </FrameLayout>
...
